--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-dom": "^16.4.0",
     "react-redux": "^5.0.6",
     "react-router-dom": "^4.3.1",
+    "react-simple-maps": "^0.12.1",
     "redux": "^4.0.0",
     "redux-logger": "^3.0.6",
     "redux-promise-middleware": "^5.1.1",
