--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "firebase": "^5.0.4",
     "react": "^16.4.0",
     "react-dom": "^16.4.0",
+    "react-motion": "^0.5.2",
     "react-redux": "^5.0.6",
     "react-router-dom": "^4.3.1",
     "react-simple-maps": "^0.12.1",
