--- a/package.json
+++ b/package.json
@@ -31,9 +31,11 @@
   "dependencies": {
     "@material-ui/core": "^1.3.1",
     "@material-ui/icons": "^1.1.0",
+    "autosuggest-highlight": "^3.1.1",
     "babel-runtime": "^6.26.0",
     "firebase": "^5.0.4",
     "react": "^16.4.0",
+    "react-autosuggest": "^9.3.4",
     "react-dom": "^16.4.0",
     "react-motion": "^0.5.2",
     "react-redux": "^5.0.6",
