fix: cache, select country, search country
Signed-off-by: sakal <sakals@mail.ua>

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Sunny-box",
+  "name": "SunnyBox",
   "version": "1.0.0",
   "description": "Sunny-box is a next-generation of online radio",
   "main": "index.js",
