--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@material-ui/core": "^1.4.0",
     "@material-ui/icons": "^1.1.0",
     "autosuggest-highlight": "^3.1.1",
+    "axios": "^0.18.0",
     "babel-runtime": "^6.26.0",
     "firebase": "^5.0.4",
     "react": "^16.4.0",
