--- a/package.json
+++ b/package.json
@@ -5,18 +5,29 @@
   "main": "index.js",
   "browserslist": [
     "> 1%",
-    "ie > 10"
+    "ie >= 11"
   ],
   "babel": {
     "presets": [
-      "es2015",
-      "react",
-      "stage-2"
+      [
+        "@babel/env",
+        {
+          "targets": {
+            "browsers": [
+              "> 1%",
+              "ie >= 11",
+              "not op_mini all"
+            ]
+          }
+        }
+      ],
+      "@babel/react"
     ],
     "plugins": [
-      "transform-runtime"
-    ],
-    "ignore": "_*.*"
+      "@babel/plugin-proposal-class-properties",
+      "@babel/plugin-syntax-dynamic-import",
+      "@babel/transform-runtime"
+    ]
   },
   "scripts": {
     "start": "webpack-dev-server",
@@ -33,11 +44,11 @@
     "@material-ui/icons": "^1.1.0",
     "autosuggest-highlight": "^3.1.1",
     "axios": "^0.18.0",
-    "babel-runtime": "^6.26.0",
     "firebase": "^5.0.4",
     "react": "^16.4.0",
     "react-autosuggest": "^9.3.4",
     "react-dom": "^16.4.0",
+    "react-loadable": "^5.5.0",
     "react-motion": "^0.5.2",
     "react-redux": "^5.0.6",
     "react-router-dom": "^4.3.1",
@@ -49,12 +60,14 @@
     "styled-components": "^3.3.3"
   },
   "devDependencies": {
-    "babel-core": "^6.26.0",
-    "babel-loader": "^7.1.2",
-    "babel-plugin-transform-runtime": "^6.23.0",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-react": "^6.24.1",
-    "babel-preset-stage-2": "^6.24.1",
+    "@babel/cli": "^7.0.0",
+    "@babel/core": "^7.0.0",
+    "@babel/plugin-proposal-class-properties": "^7.0.0",
+    "@babel/plugin-syntax-dynamic-import": "^7.0.0",
+    "@babel/plugin-transform-runtime": "^7.0.0",
+    "@babel/preset-env": "^7.0.0",
+    "@babel/preset-react": "^7.0.0",
+    "babel-loader": "^8.0.0",
     "clean-webpack-plugin": "^0.1.16",
     "cross-env": "^5.0.5",
     "extract-text-webpack-plugin": "^3.0.0",
